# AgentCraft

./: .env.example  .gitignore  .replit  ADAPTIVE_LLM_SYSTEM.md  API.md  ARCHITECTURE.md  CONTRIBUTING.md  CONVERSATION_SYSTEM.md  DATABASE_SETUP.md  DEPLOYMENT.md  ENHANCED_SETUP_GUIDE.md  FRONTEND.md  GALILEO_ADAPTIVE_INTEGRATION.md  GALILEO_SETUP.md  KNOWLEDGE_SYSTEM.md  README.md  SERVICES.md  TESTING.md  TROUBLESHOOTING.md  WEBSOCKET.md  agents.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements-db.txt  requirements.txt  requirements_enhanced.txt  setup_database.sh  setup_enhanced_system.py  setup_replit_database.py  tailwind.config.js  test_adaptive_system.py  test_api_endpoints.py  test_endpoints.py  test_galileo.py  test_galileo_debug.py  test_galileo_session.py  test_galileo_simple.py  (+4 more)
attached_assets/: Pasted---1756106663167_1756106663168.txt  Pasted--AgentCraft-Initial-Setup-Prompt-For-Replit-Cursor-Claude-I-m-building-AgentCraft-a-1756005267540_1756005267541.txt  Pasted--React-Frontend-Setup-Prompt-for-AgentCraft-For-Cursor-Claude-React-Frontend-Addition-I-1756006866961_1756006866961.txt  Pasted-AgentForce-Technical-Architect-Panel-Presentation-Brief-Overview-This-presentation-is-your-opportuni-1756108067141_1756108067142.txt  Pasted-Uncaught-runtime-errors-ERROR-Cannot-read-properties-of-undefined-reading-strengths-TypeError-1756007438770_1756007438771.txt
backend/: __init__.py  agent_management_api.py  database_integration.py  efficiency_api.py  enhanced_backend.py  knowledge_api.py  main.py  websocket_api.py
(+51 files in other folders)
