[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "crewai>=0.165.1",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.99.9",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
    "websockets>=12.0",
    "galileo>=1.16.0",
]
